--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- CSS stylesheet-->
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style-home.css" />
 
   </head>
   <body>
