--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="imagens/logo.png" alt="Logo da barbearia Alura"/></h1>
+        <h1><img src="Imagens/logo.png" alt="Logo da barbearia Alura"/></h1>
 
         <nav>
           <ul>
@@ -112,7 +112,7 @@
     </main>
 
     <footer>
-      <img src="imagens/logo-branco.png" alt="Imagem logo branco Alura" />
+      <img src="Imagens/logo-branco.png" alt="Imagem logo branco Alura" />
       <p class="copyright">&copy; Copyright Barbearia Alura - 2020</p>
     </footer>
   </body>
