--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="imagens/logo.png" alt="Logo da barbearia Alura"/></h1>
+        <h1><img src="Imagens/logo.png" alt="Logo da barbearia Alura"/></h1>
 
         <nav>
           <ul>
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <img class="banner" src="imagens/banner.jpg" alt="Foto Barbearia"/>
+    <img class="banner" src="Imagens/banner.jpg" alt="Foto Barbearia"/>
 
     <main>
       <section class="principal">
@@ -35,7 +35,7 @@
 
         <img
           class="utensilios"
-          src="imagens/utensilios.jpg"
+          src="Imagens/utensilios.jpg"
           alt="Utensilios de um barbeiro"
         />
 
@@ -90,7 +90,7 @@
                 <li class="itens">Profissionais qualificados</li>
                 <li class="itens">Pontualidade</li>
                 <li class="itens">Limpeza</li>
-            </ul><img class="img-beneficios" src="imagens/beneficios.jpg" alt="Foto benefícios"/>
+            </ul><img class="img-beneficios" src="Imagens/beneficios.jpg" alt="Foto benefícios"/>
         </div>
 
         <div class="video">
@@ -107,7 +107,7 @@
     </main>
 
     <footer>
-      <img src="imagens/logo-branco.png" alt="Imagem logo branco Alura" />
+      <img src="Imagens/logo-branco.png" alt="Imagem logo branco Alura" />
       <p class="copyright">&copy; Copyright Barbearia Alura - 2020</p>
     </footer>
   </body>
