--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 
 
       <div class="caixa">
-        <h1><img src="imagens/logo.png" alt="Logo da barbearia Alura" /></h1>
+        <h1><img src="Imagens/logo.png" alt="Logo da barbearia Alura" /></h1>
 
     <nav>
       <ul>
@@ -29,7 +29,7 @@
       <li>
 
         <h2>Cabelo</h2>
-        <img src="imagens/cabelo.jpg">
+        <img src="Imagens/cabelo.jpg">
         <p class="produto-descricao">Na tesoura ou máquina como o cliente preferir</p>
         <p class="produto-preco">R$ 25,00</p>
 
@@ -38,7 +38,7 @@
       <li>
 
         <h2>Barba</h2>
-        <img src="imagens/barba.jpg">
+        <img src="Imagens/barba.jpg">
         <p class="produto-descricao">Corte e desenho profissional de barba</p>
         <p class="produto-preco">R$ 18,00</p>
 
@@ -56,7 +56,7 @@
   </main>
 
   <footer>
-      <img src="imagens/logo-branco.png">
+      <img src="Imagens/logo-branco.png">
       <p class="copyright">	&copy; Copyright Barbearia Alura - 2020</p>
 
 
